# vger-rs

./: Cargo.toml
src/: glyphs.rs  lib.rs  shader.wgsl
tests/: common.rs  tests.rs
